# ToolKits

AiBox_Console/: .gitignore  CMakeLists.txt  README.md
AiBox_Console/inc/: AiBox_Console.h
AiBox_Console/src/: AiBox_Console.cpp
AiBox_Console/test/: main.cpp
AiBox_LOG/: AiBox_LOG.h  CMakeLists.txt  README.md
AiBox_LOG/inc/: AiBox_LOG.h  AiBox_LogManage.h
AiBox_LOG/src/: AiBox_LogManage.cpp
AiBox_LOG/test/: main.cpp  src.cpp  src.h
AiBox_SHM/: CMakeLists.txt  README.md
AiBox_SHM/inc/: AiBox_SHM.h
AiBox_SHM/src/: AiBox_SHM.cpp
AiBox_SHM/test/: clear_main.cpp  read_main.cpp  write_main.cpp
ESP-32/: CMakeLists.txt  README.md
ESP-32/AiBox/: CMakeLists.txt  sdkconfig
ESP-32/AiBox/main/: Main.cpp
ESP-32/components/AiBox_Bluetooth/: AiBox_BleBase.cpp  AiBox_BleESP.cpp  AiBox_BleInterface.cpp  CMakeLists.txt
ESP-32/components/AiBox_Bluetooth/inc/: AiBox_BleBase.hpp  AiBox_BleData.hpp  AiBox_BleESP.hpp  AiBox_BleInterface.hpp  BleServiceBase.hpp  BleServiceWiFiConfigTable.hpp
ESP-32/components/AiBox_Bluetooth/service/: BleServiceBase.cpp  BleServiceWiFiConfigTable.cpp
ESP-32/components/AiBox_Board/: AiBox_BoardBase.cpp  AiBox_BoardESP.cpp  AiBox_BoardInterface.cpp  CMakeLists.txt
ESP-32/components/AiBox_Board/inc/: AiBox_BoardBase.hpp  AiBox_BoardDataType.hpp  AiBox_BoardESP.hpp  AiBox_BoardInterface.hpp
ESP-32/components/AiBox_Console/: AiBox_Console.cpp  AiBox_ConsoleBase.cpp  AiBox_ESPConsole.cpp  CMakeLists.txt
ESP-32/components/AiBox_Console/inc/: AiBox_Console.hpp  AiBox_ConsoleBase.hpp  AiBox_ESPConsole.hpp
ESP-32/components/AiBox_DeBug/: CMakeLists.txt  empty.cpp
ESP-32/components/AiBox_DeBug/inc/: ESP32Log.hpp  LogInterface.hpp
ESP-32/components/AiBox_Flash/: AiBox_ESPFlash.cpp  AiBox_FlashBase.cpp  AiBox_FlashInterface.cpp  CMakeLists.txt
ESP-32/components/AiBox_Flash/inc/: AiBox_ESPFlash.hpp  AiBox_FlashBase.hpp  AiBox_FlashErrCode.hpp  AiBox_FlashInterface.hpp
ESP-32/components/AiBox_HttpClient/: AiBox_ESP32HttpClient.cpp  AiBox_HttpClientBase.cpp  AiBox_HttpClientInterface.cpp  CMakeLists.txt
ESP-32/components/AiBox_HttpClient/inc/: AiBox_ESP32HttpClient.hpp  AiBox_HttpClientBase.hpp  AiBox_HttpClientInterface.hpp  AiBox_HttpRequestData.hpp
ESP-32/components/AiBox_PlayManage/: AiBox_PlayManage.cpp  CMakeLists.txt
ESP-32/components/AiBox_PlayManage/inc/: AiBox_PlayManage.hpp
ESP-32/components/AiBox_Player/: AiBox_BasePlayer.cpp  AiBox_ESPPlayer.cpp  AiBox_PlayerInterface.cpp  CMakeLists.txt
ESP-32/components/AiBox_Player/inc/: AiBox_BasePlayer.hpp  AiBox_ESPPlayer.hpp  AiBox_PlayerInterface.hpp  AiBox_PlayerStatus.hpp
ESP-32/components/AiBox_Player/tools/: README.txt  mk_audio_bin.py
ESP-32/components/AiBox_ProcessASR/: AiBox_ProcessASR.cpp  CMakeLists.txt
ESP-32/components/AiBox_ProcessASR/inc/: AiBox_ProcessASR.hpp
ESP-32/components/AiBox_SemanticParse/: AiBox_SemanticDataType.cpp  AiBox_SemanticParse.cpp  CMakeLists.txt
ESP-32/components/AiBox_SemanticParse/inc/: AiBox_SemanticDataType.hpp  AiBox_SemanticParse.hpp
ESP-32/components/AiBox_System/: AiBox_ESPSystem.cpp  AiBox_SystemBase.cpp  AiBox_SystemInterface.cpp  AiBox_SystemStatusData.cpp  CMakeLists.txt
ESP-32/components/AiBox_System/inc/: AiBox_ESPSystem.hpp  AiBox_SystemBase.hpp  AiBox_SystemInterface.hpp  AiBox_SystemStatusData.hpp
ESP-32/components/AiBox_Uart/: AiBox_UART.cpp  AiBox_UARTESP32.cpp  CMakeLists.txt
ESP-32/components/AiBox_Uart/inc/: AiBox_UART.h  AiBox_UARTBase.h  AiBox_UARTESP32.h
ESP-32/components/AiBox_VoiceASR/: AiBox_VoiceASR.cpp  AiBox_VoiceASRBaidu.cpp  AiBox_VoiceASRBase.cpp  AiBox_author.cpp  CMakeLists.txt
ESP-32/components/AiBox_VoiceASR/inc/: AiBox_VoiceASR.hpp  AiBox_VoiceASRBaidu.hpp  AiBox_VoiceASRBase.hpp  AiBox_author.hpp
ESP-32/components/AiBox_WiFi/: AiBox_WiFiBase.cpp  AiBox_WiFiESP32.cpp  AiBox_WiFiInterface.cpp  CMakeLists.txt  WIFI监测逻辑.docx
ESP-32/components/AiBox_utilize/: AiBox_utilizeESP.cpp  CMakeLists.txt
ESP-32/config/: sdkconfig  update_sdkconfig.sh
ESP-32/test/test_AES/: CMakeLists.txt
ESP-32/test/test_ASRProcess/: CMakeLists.txt  sdkconfig.old
ESP-32/test/test_CommandUart/: CMakeLists.txt  sdkconfig
ESP-32/test/test_SemanticParse/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP-32/test/test_base64/: CMakeLists.txt
ESP-32/test/test_bluetooth/: CMakeLists.txt
ESP-32/test/test_button/: CMakeLists.txt
ESP-32/test/test_console/: CMakeLists.txt
ESP-32/test/test_cpu/: sdkconfig  sdkconfig_old
ESP-32/test/test_flash/: CMakeLists.txt
ESP-32/test/test_http_client/: CMakeLists.txt
ESP-32/test/test_log/: CMakeLists.txt  sdkconfig
ESP-32/test/test_player/: CMakeLists.txt  sdkconfig
ESP-32/test/test_system/: CMakeLists.txt  sdkconfig
ESP-32/test/test_voice/: CMakeLists.txt
ESP-32/test/test_wifi_connect/: CMakeLists.txt
ESP-32/应用开发说明/: Flash接口使用说明.docx  HTTP请求接口说明.docx  信息打印接口说明.docx  按键应用开发说明.docx  系统应用接口说明.docx
cooper-system/: .gitignore  CMakeLists.txt  README.txt
cooper-system/inc/: LCMParser.h  UDPBroadcast.h
cooper-system/src/: LCMParser.cpp  UDPBroadcast.cpp
cooper-system/test/: libpcre.so.1  main.cpp
(+33 files in other folders)
